<resources>
    <string name="app_name">AppointmentBookster</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;AppointmentBookster</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_fragment_label">Add An Appointment</string>
    <string name="search_fragment_label">Search Appointments</string>
    <string name="readme_fragment_label">Readme</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- First Fragment strings -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_first_fragment_version_02">Don\'t light yourself on fire to keep others warm.</string>
    <string name="hello_first_fragment_version_03">Rome wasn\'t built in a day.</string>
    <string name="button_add_appointment">Add An Appointment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_second_fragment_version2">Here is the Second fragment with text added to the TextView XML part.</string>
    <string name="main_textview_mainmenu">MAIN MENU</string>
    <string name="mainButtonGotoSearch">Search for appointments</string>
    <string name="mainButtonGotoReadme">Help</string>

    <!-- Add Appointment strings -->
    <string name="owner">OWNER</string>
    <string name="description">DESCRIPTION</string>
    <string name="startDateTime">START DATE &amp; TIME</string>
    <string name="endDateTime">END DATE &amp; TIME</string>
    <string name="add">Add</string>
    <string name="contentWarningFix">This will fix the content warning message which I will miss like having a rock in my shoe.</string>
    <string name="main_return">Return To Main Menu</string>
    <string name="submit">Submit</string>
    <!-- EditText hints -->
    <string name="add_edittext_owner_description">Owner of the appointment book.</string>
    <string name="add_edittext_description_description">Description of the new appointment.</string>
    <string name="add_edittext_startDateTime_description">MM/DD/YYYY HH:MM am/pm format start date and time</string>
    <string name="add_edittext_endDateTime_description">MM/DD/YYYY HH:MM am/pm format end date and time</string>

    <!-- SearchFragment strings -->
    <string name="search_textview_default">This is the search fragment</string>
    <string name="searchButtonSearch">Search</string>

    <!-- ReadmeFragment strings -->
    <string name="readmeTextviewDefault">This is the README fragment</string>


</resources>