<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_guideline_top"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_guideline_left"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_guideline_right"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <TextView
        android:id="@+id/add_textview_owner"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/owner"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/add_guideline_top" />

    <EditText
        android:id="@+id/add_edittext_owner"
        android:hint="@string/add_edittext_owner_description"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintRight_toLeftOf="@+id/add_guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/add_textview_owner"/>

    <TextView
        android:id="@+id/add_textview_description"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/add_edittext_owner" />

    <EditText
        android:id="@+id/add_edittext_description"
        android:hint="@string/add_edittext_description_description"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintRight_toLeftOf="@+id/add_guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/add_textview_description"/>

    <TextView
        android:id="@+id/add_textview_startDateTime"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/startDateTime"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/add_edittext_description" />

    <EditText
        android:id="@+id/add_edittext_startDateTime"
        android:hint="@string/add_edittext_startDateTime_description"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintRight_toLeftOf="@+id/add_guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/add_textview_startDateTime"/>

    <TextView
        android:id="@+id/add_textview_endDateTime"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/endDateTime"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/add_edittext_startDateTime" />

    <EditText
        android:id="@+id/add_edittext_endDateTime"
        android:hint="@string/add_edittext_endDateTime_description"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toRightOf="@+id/add_guideline_left"
        app:layout_constraintRight_toLeftOf="@+id/add_guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/add_textview_endDateTime"/>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <Button
        android:id="@+id/addFragmentSubmit"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_guideline" />

    <Button
        android:id="@+id/addReturn"
        android:text="@string/main_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>

