<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="edu.pdx.cs410J.jpersson.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_AddFragment"
            app:destination="@id/AddFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_searchFragment"
            app:destination="@id/SearchFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_readmeFragment"
            app:destination="@id/ReadmeFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="edu.pdx.cs410J.jpersson.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/AddFragment"
        android:name="edu.pdx.cs410J.jpersson.AddFragment"
        android:label="@string/add_fragment_label"
        tools:layout="@layout/fragment_add">

        <action
            android:id="@+id/action_AddFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SearchFragment"
        android:name="edu.pdx.cs410J.jpersson.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_SearchFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ReadmeFragment"
        android:name="edu.pdx.cs410J.jpersson.ReadmeFragment"
        android:label="@string/readme_fragment_label"
        tools:layout="@layout/fragment_readme" >
        <action
            android:id="@+id/action_ReadmeFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

</navigation>