<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <!-- ^ Here is where the processing for this layout is specified -->

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_guideline_top"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <TextView
        android:id="@+id/main_textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textview_mainmenu"
        app:layout_constraintBottom_toTopOf="@id/main_guideline_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_add"
        android:text="@string/button_add_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_guideline_top"/>

    <Button
        android:id="@+id/mainMenuButtonSearch"
        android:text="@string/mainButtonGotoSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add"/>

    <Button
        android:id="@+id/mainMenuButtonReadme"
        android:text="@string/mainButtonGotoReadme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainMenuButtonSearch"/>

</androidx.constraintlayout.widget.ConstraintLayout>